--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -34,6 +34,29 @@ body {
   --text-color-shadow: rgb(0, 0, 0);
 }
 
+/* Color preview styles for default color-picker-btn colors */
+.solid-bg-preview {
+  background-color: #2c1111ff;
+}
+.linear-bg-preview-1 {
+  background-color: #511111ff;
+}
+.linear-bg-preview-2 {
+  background-color: #212246ff;
+}
+.linear-bg-preview-3 {
+  background-color: #024851ff;
+}
+.radial-bg-preview-1 {
+  background-color: #511111ff;
+}
+.radial-bg-preview-2 {
+  background-color: #212246ff;
+}
+.radial-bg-preview-3 {
+  background-color: #024851ff;
+}
+
 /* ============================================
    TYPOGRAPHY
    ============================================ */
@@ -162,6 +185,10 @@ h3 {
   display: block;
 }
 
+.d-none {
+  display: none;
+}
+
 .text-center {
   text-align: center;
 }
@@ -226,14 +253,22 @@ h3 {
   border-radius: 17px;
   display: flex;
   flex-direction: column;
-  gap: 5px;
   color: rgb(201, 200, 200);
   min-height: 215px;
   margin-top: 5px;
   box-shadow: inset #472828 0px 0px 6px 1px;
 }
 
-.settings-panel > p {
+.settings-panel > .panel-inner {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  transition: opacity 0.6s ease-out;
+  opacity: 0;
+  /* transition: 0.6s; */
+}
+
+#blank-settings-message {
   margin-top: 15px;
   margin-left: 10px;
   font-size: small;
@@ -245,6 +280,7 @@ h3 {
 
 label {
   color: var(--text-color);
+  -webkit-user-select: none;
   user-select: none;
 }
 
@@ -260,7 +296,8 @@ button {
   /* border-radius: 5px; */
   cursor: pointer;
   box-shadow: white 0px 0px 2px;
-  transition: background-color 0.4s, box-shadow 0.1s;
+  border: 1px solid transparent;
+  transition: background-color 0.3s, box-shadow 0.4s, border 0.4s;
 }
 
 button:hover {
@@ -269,7 +306,9 @@ button:hover {
 }
 
 button:active {
-  box-shadow: rgb(173, 173, 173) 0px 0px 14px !important;
+  box-shadow: rgb(173, 173, 173) 0px 0px 13px !important;
+  border: 1px solid rgb(216, 141, 1);
+  transition: border 0s, box-shadow 0s;
 }
 
 button[type='submit'] {
@@ -291,6 +330,9 @@ button.btn-sm {
 
 button.btn-sm:hover {
   background-color: #0a3549;
+}
+button.btn-sm:active {
+  box-shadow: none !important;
 }
 
 /* ============================================
@@ -365,6 +407,7 @@ input[type='checkbox'] {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
 }
 
@@ -604,6 +647,11 @@ option {
   max-width: 200px;
 }
 
+.select-small > option {
+  padding: 9px 10px;
+  font-size: 14px;
+}
+
 option:first-of-type {
   border-radius: 8px 8px 0 0;
 }
@@ -691,7 +739,7 @@ option::checkmark {
 
 /* Image size select */
 #bg-image-size {
-  width: 90px;
+  width: 101px;
   margin: 7px 0px 7px 5px;
   padding-top: 3px;
   padding-left: 10px;
@@ -751,6 +799,7 @@ option::checkmark {
   overflow: hidden;
   background: none;
   color: inherit;
+  border: none;
 }
 
 #history-list > div:first-of-type {
