--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -68,6 +68,7 @@ h1 {
   font-size: xx-large;
   font-family: monospace;
   text-shadow: var(--text-color-shadow) 0px 0px 12px;
+  block-size: 35px;
 }
 
 h2,
@@ -130,6 +131,10 @@ h3 {
   font-size: 0.8rem;
 }
 
+.fs-085rem {
+  font-size: 0.85rem;
+}
+
 /* ============================================
    LAYOUT UTILITIES
    ============================================ */
@@ -144,8 +149,20 @@ h3 {
   align-items: start !important;
 }
 
+.align-center {
+  align-items: center !important;
+}
+
+.align-end {
+  align-items: end !important;
+}
+
 .justify-start {
   justify-content: start !important;
+}
+
+.justify-end {
+  justify-content: end !important;
 }
 
 .justify-between {
@@ -279,13 +296,20 @@ h3 {
 }
 
 /* ============================================
-   FORM ELEMENTS - COMMON
+  COMMON
    ============================================ */
 
 label {
   color: var(--text-color);
   -webkit-user-select: none;
   user-select: none;
+}
+
+hr {
+  border: 1px solid #724949;
+  margin: 0;
+  margin-top: 2px;
+  margin-bottom: 5px;
 }
 
 /* ============================================
@@ -313,6 +337,7 @@ button:active {
   box-shadow: rgb(173, 173, 173) 0px 0px 13px !important;
   border: 1px solid rgb(216, 141, 1) !important;
   transition: border 0s, box-shadow 0s;
+  transform: scale(0.98);
 }
 
 button[type='submit'] {
