Enhance popup toggle functionality: Add no-transition class to slider elements for loading. Update JavaScript to remove the no-transition class after a brief delay, ensuring a seamless user experience when toggling switches.

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -477,6 +477,11 @@ input[type='range'] {
   transition: 0.4s;
 }
 
+.slider.no-transition,
+.slider.no-transition:before {
+  transition: none !important;
+}
+
 input:checked + .slider {
   background-color: #020f47d8;
 }
