--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -25,6 +25,7 @@ body {
 /* css variables */
 :root {
   --accent-color: #724949;
+  --accent-color-dark: #020f47d8;
   --accent-color-hover: #0a3549;
   --accent-color-active: #0a1345;
   --accent-color-disabled: #3b0000f5;
@@ -73,10 +74,10 @@ h1 {
   text-align: center;
   margin: 0;
   color: black;
-  font-size: xx-large;
+  font-size: 1.93em;
   font-family: monospace;
   text-shadow: var(--text-color-shadow) 0px 1px 12px;
-  block-size: 35px;
+  block-size: 27px;
 }
 
 h2,
@@ -84,6 +85,7 @@ h3 {
   text-shadow: 2px 2px 4px var(--text-color-shadow);
   margin-bottom: 0;
   margin-block-start: 0.4em;
+  block-size: 28px;
 }
 
 .bungee-spice-regular {
@@ -434,7 +436,7 @@ input[type='file']::file-selector-button:hover {
 
 /* Range input */
 input[type='range'] {
-  accent-color: var(--accent-color);
+  accent-color: #d15e00e0;
   width: 175px;
   margin-left: 8px;
 }
@@ -483,7 +485,7 @@ input[type='range'] {
 }
 
 input:checked + .slider {
-  background-color: #020f47d8;
+  background-color: var(--accent-color-dark);
 }
 input:checked + .slider:before {
   transform: translateX(26px);
